ros2_ws/src/autonomo/log/build_2024-09-24_13-07-50/autonomo/stderr.log
  File "/home/emmanuel13/code/AyDpVA/ros2_ws/src/autonomo/install/autonomo/lib/python3.12/site-packages/autonomo/publisherveh.py", line 3
    import rclpy.node import node
                      ^^^^^^
SyntaxError: invalid syntax

